--- a/public/mail.html
+++ b/public/mail.html
@@ -304,8 +304,15 @@
         // -------------------- Firebase Init --------------------
         let app, db, auth;
         const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
-        
-        const firebaseConfig = typeof __firebase_config !== 'undefined' ? JSON.parse(__firebase_config) : {};
+        const firebaseConfig = {
+  apiKey: "AIzaSyB2HVNHCEcciP5NdHxp3CoK6ga_xrWs9X0",
+  authDomain: "mail-inbox-12659.firebaseapp.com",
+  projectId: "mail-inbox-12659",
+  storageBucket: "mail-inbox-12659.firebasestorage.app",
+  messagingSenderId: "1072374074441",
+  appId: "1:1072374074441:web:79679d4c5299798efb8398",
+  measurementId: "G-LM4D6FG5WY"
+};
         if (Object.keys(firebaseConfig).length > 0) {
             app = initializeApp(firebaseConfig);
             auth = getAuth(app);
