--- a/public/login.html
+++ b/public/login.html
@@ -27,7 +27,7 @@
 
     <p class="text-center text-sm text-gray-500 mt-6">Access is restricted to registered family members only.</p>
   </div>
-
-  <script src="login.js" defer></script>
+  
+<script type="module" src="login.js"></script>
 </body>
 </html>
