--- a/public/login.html
+++ b/public/login.html
@@ -11,7 +11,7 @@
     <h1 class="text-3xl font-bold mb-6 text-center text-blue-700">👋 Welcome to the Family Platform!</h1>
     
     <!-- טופס ללא action -->
-    <form id="login-form" class="space-y-4">
+    <form id="loginForm" class="space-y-4">
       <div>
         <label for="username" class="block text-sm font-medium text-gray-700">Username</label>
         <input type="text" id="username" name="username" required class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-blue-500 focus:border-blue-500" />
