--- a/public/login.html
+++ b/public/login.html
@@ -23,6 +23,7 @@
       <button type="submit" class="w-full py-2 px-4 bg-blue-600 text-white rounded-md hover:bg-blue-700 font-semibold">
         Log In
       </button>
+      <div id="loginStatus"></div>
     </form>
 
     <p class="text-center text-sm text-gray-500 mt-6">Access is restricted to registered family members only.</p>
