--- a/public/login.html
+++ b/public/login.html
@@ -5,30 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Welcome to the Family Tree</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" />
+  <style>
+    /*
+     * Custom CSS for any specific styling not handled by Tailwind
+     * For example, subtle animations or unique component looks.
+     */
+    body {
+      font-family: sans-serif;
+    }
+  </style>
 </head>
 <body class="bg-gradient-to-br from-blue-100 to-white min-h-screen flex items-center justify-center">
   <div class="bg-white p-8 rounded-xl shadow-lg w-full max-w-md">
     <h1 class="text-3xl font-bold mb-6 text-center text-blue-700">👋 Welcome to the Family Platform!</h1>
     
-    <!-- טופס ללא action -->
+    <!-- טופס מותאם ל-login.js -->
     <form id="loginForm" class="space-y-4">
       <div>
-        <label for="username" class="block text-sm font-medium text-gray-700">Username</label>
-        <input type="text" id="username" name="username" required class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-blue-500 focus:border-blue-500" />
+        <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
+        <input type="email" id="email" name="email" required
+               class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-blue-500 focus:border-blue-500" />
       </div>
       <div>
         <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
-        <input type="password" id="password" name="password" required class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-blue-500 focus:border-blue-500" />
+        <input type="password" id="password" name="password" required
+               class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:ring-blue-500 focus:border-blue-500" />
       </div>
       <button type="submit" class="w-full py-2 px-4 bg-blue-600 text-white rounded-md hover:bg-blue-700 font-semibold">
         Log In
       </button>
-      <div id="loginStatus"></div>
+      <div id="status" class="mt-2 text-center text-sm text-red-500"></div>
     </form>
 
     <p class="text-center text-sm text-gray-500 mt-6">Access is restricted to registered family members only.</p>
   </div>
   
-<script type="module" src="login.js"></script>
+  <!-- יבוא סקריפט ה-JS -->
+  <script type="module" src="login.js"></script>
 </body>
 </html>
