--- a/public/index.html
+++ b/public/index.html
@@ -72,9 +72,19 @@
         <a id="menuLogin" href="/login.html" class="menu-item bg-blue-500 text-white hover:bg-blue-600 hover:scale-105"><span>🔐</span> כניסת משתמשים</a>
         <a id="menuLogout" href="/logout" class="menu-item bg-red-500 text-white hover:bg-red-600 hover:scale-105">התנתקות</a>
     </nav>
-    
+    <!-- Smartsupp Live Chat script -->
+<script type="text/javascript">
+var _smartsupp = _smartsupp || {};
+_smartsupp.key = 'cd933f1f7259630fc81394b73f12233e0373b6b6';
+window.smartsupp||(function(d) {
+  var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
+  s=d.getElementsByTagName('script')[0];c=d.createElement('script');
+  c.type='text/javascript';c.charset='utf-8';c.async=true;
+  c.src='https://www.smartsuppchat.com/loader.js?';s.parentNode.insertBefore(c,s);
+})(document);
+</script>
 <noscript> Powered by <a href=“https://www.smartsupp.com” target=“_blank”>Smartsupp</a></noscript>
-
+    
     <main class="max-w-6xl mx-auto mt-8 p-6 md:p-8 bg-white rounded-3xl shadow-xl">
         <section class="mb-8 p-6 bg-blue-50 rounded-2xl shadow-inner">
             <h3 id="sectionWelcome" class="text-xl md:text-2xl font-bold mb-4 text-blue-900">🌟 ברוכים הבאים למרכז המשפחתי</h3>
