--- a/public/index.html
+++ b/public/index.html
@@ -72,60 +72,56 @@
         <a id="menuLogin" href="/login.html" class="menu-item bg-blue-500 text-white hover:bg-blue-600 hover:scale-105"><span>🔐</span> כניסת משתמשים</a>
         <a id="menuLogout" href="/logout" class="menu-item bg-red-500 text-white hover:bg-red-600 hover:scale-105">התנתקות</a>
     </nav>
-<!-- Smartsupp AI Chat מותאם למשתמש מחובר וצד משפחתי -->
+<!-- Smartsupp Live Chat script -->
 <script type="text/javascript">
   var _smartsupp = _smartsupp || {};
   _smartsupp.key = '4e98680f7ecad4875adb0857bb7e6c38b22e49b4';
 
-  async function initSmartsupp() {
-    let userName = "אורח";
-    let userRole = "user";
-    let userSide = "כללי";
-
+  // פונקציה לאתחול עם משתמש מחובר או אורח
+  async function initSmartsupp(user) {
     try {
-      const res = await fetch("/api/user", { credentials: "include" });
-      if (!res.ok) throw new Error("לא מחובר");
-      const data = await res.json();
+      if (user && user.email) {
+        // משתמש מחובר – אפשר לשלוח info ל-Smartsupp
+        _smartsupp.name = user.email;
+        _smartsupp.email = user.email;
+      } else {
+        // אורח
+        _smartsupp.name = 'Guest';
+      }
 
-      userName = data.profile?.fullName || data.user.email;
-      userRole = data.profile?.role || "user";
-      userSide = data.profile?.side || "כללי";
+      if (!window.smartsupp) {
+        (function(d) {
+          var s,c,o=smartsupp=function(){ o._.push(arguments)}; o._=[];
+          s=d.getElementsByTagName('script')[0];
+          c=d.createElement('script'); c.type='text/javascript'; c.charset='utf-8'; c.async=true;
+          c.src='https://www.smartsuppchat.com/loader.js?';
+          s.parentNode.insertBefore(c,s);
+        })(document);
+      }
 
     } catch (err) {
-      console.warn("Smartsupp: משתמש לא מחובר, הצ'אט יפעל כאורח.", err);
+      console.error("Smartsupp init error:", err);
     }
-
-    // הגדרת Smartsupp עם מידע המשתמש והצד המשפחתי
-    _smartsupp.settings = {
-      welcomeMessage: `שלום ${userName} (${userSide})! איך אפשר לעזור לך היום?`,
-      aiEnabled: true,
-      hideOnMobile: false,
-      user: {
-        name: userName,
-        email: userRole === "user" ? "" : data?.user.email, // אם לא משתמש רשום, השאר ריק
-        role: userRole,
-        side: userSide
-      }
-    };
-
-    // טעינה אסינכרונית של הצ'אט
-    window.smartsupp||(function(d) {
-      var s,c,o=smartsupp=function(){ o._.push(arguments)};o._=[];
-      s=d.getElementsByTagName('script')[0];
-      c=d.createElement('script');
-      c.type='text/javascript';
-      c.charset='utf-8';
-      c.async=true;
-      c.src='https://www.smartsuppchat.com/loader.js?';
-      s.parentNode.insertBefore(c,s);
-    })(document);
   }
 
-  window.addEventListener("load", initSmartsupp);
+  // שליפת המשתמש המחובר מהשרת (API שלנו)
+  fetch("/api/user")
+    .then(res => {
+      if (!res.ok) throw new Error("לא מחובר");
+      return res.json();
+    })
+    .then(data => {
+      initSmartsupp(data.user); // משתמש מחובר
+    })
+    .catch(err => {
+      console.warn("Smartsupp: משתמש לא מחובר, הצ'אט יפעל כאורח.", err);
+      initSmartsupp(null); // אורח
+    });
 </script>
 <noscript>
   Powered by <a href="https://www.smartsupp.com" target="_blank">Smartsupp</a>
 </noscript>
+
 
 
     <main class="max-w-6xl mx-auto mt-8 p-6 md:p-8 bg-white rounded-3xl shadow-xl">
