--- a/public/memorial.html
+++ b/public/memorial.html
@@ -286,7 +286,7 @@
                             name: 'פרנק ון דר ולדה',
                             years: '1943 - 2025',
                             dedication: 'פרנק היה אדם אהוב, אבא, סבא, חבר, ונשמה חמה וטובה.',
-                            photoUrl: 'https://placehold.co/150x150/E9D5FF/5B21B6?text=פרנק',
+                            photoUrl: 'assets/frank.png',
                             candles: 0,
                             comments: []
                         }
