--- a/public/tree.html
+++ b/public/tree.html
@@ -25,8 +25,17 @@
 <script type="module">
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
 import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-
-const app = initializeApp({});
+  const firebaseConfig = {
+  apiKey: "AIzaSyBtkY1qKbZNFRaMd5fqNtqyf0d7wND5wHI",
+  authDomain: "our-family-tree-5c3cc.firebaseapp.com",
+  projectId: "our-family-tree-5c3cc",
+  storageBucket: "our-family-tree-5c3cc.firebasestorage.app",
+  messagingSenderId: "788477397236",
+  appId: "1:788477397236:web:0d4d95210878564c2036a1",
+  measurementId: "G-99LGBPSR3F"
+};
+  
+const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 
 let chart = null;
