--- a/public/mailbox.html
+++ b/public/mailbox.html
@@ -387,15 +387,16 @@
 
         // -------------------- Firebase Initialization --------------------
         const __app_id = "1:199399854104:web:6aec488e6aeee0dec3736d"; // Default for demonstration
-        const __firebase_config = `{
-            "apiKey": "",
-            "authDomain": "test-project.firebaseapp.com",
-            "projectId": "test-project",
-            "storageBucket": "test-project.appspot.com",
-            "messagingSenderId": "199399854104",
-            "appId": "1:199399854104:web:6aec488e6aeee0dec3736d"
-        }`;
-        const firebaseConfig = JSON.parse(__firebase_config);
+     const firebaseConfig = {
+  apiKey: "AIzaSyAID_kPGA6Khczh0lIgd7E13LJS76JJ9nI",
+  authDomain: "mailbox-e0ce2.firebaseapp.com",
+  projectId: "mailbox-e0ce2",
+  storageBucket: "mailbox-e0ce2.firebasestorage.app",
+  messagingSenderId: "199399854104",
+  appId: "1:199399854104:web:6aec488e6aeee0dec3736d",
+  measurementId: "G-V3CSEQY5CR"
+};
+
         const app = initializeApp(firebaseConfig);
         db = getFirestore(app);
         auth = getAuth(app);
