--- a/public/about.html
+++ b/public/about.html
@@ -35,7 +35,7 @@
             <i class="fas fa-home"></i>
             <span class="font-medium">עמוד הבית</span>
         </a>
-        <a href="gallery.html" class="flex items-center gap-2 text-slate-700 hover:text-blue-600 transition-colors">
+        <a href="/gallery.html" class="flex items-center gap-2 text-slate-700 hover:text-blue-600 transition-colors">
             <i class="fas fa-camera"></i>
             <span class="font-medium">גלריה</span>
         </a>
