--- a/public/index.html
+++ b/public/index.html
@@ -78,54 +78,7 @@
         <a id="menuLogin" href="/login.html" class="menu-item bg-blue-500 text-white hover:bg-blue-600 hover:scale-105"><span>🔐</span> כניסת משתמשים</a>
         <a id="menuLogout" href="/logout" class="menu-item bg-red-500 text-white hover:bg-red-600 hover:scale-105 hidden">התנתקות</a>
     </nav>
-        <!-- Smartsupp Live Chat script -->
-    <script type="text/javascript">
-      var _smartsupp = _smartsupp || {};
-      _smartsupp.key = '4e98680f7ecad4875adb0857bb7e6c38b22e49b4';
 
-      // פונקציה לאתחול עם משתמש מחובר או אורח
-      async function initSmartsupp(user) {
-        try {
-          if (user && user.email) {
-            // משתמש מחובר – אפשר לשלוח info ל-Smartsupp
-            _smartsupp.name = user.email;
-            _smartsupp.email = user.email;
-          } else {
-            // אורח
-            _smartsupp.name = 'Guest';
-          }
-
-          if (!window.smartsupp) {
-            (function(d) {
-              var s,c,o=smartsupp=function(){ o._.push(arguments)}; o._=[];
-              s=d.getElementsByTagName('script')[0];
-              c=d.createElement('script'); c.type='text/javascript'; c.charset='utf-8'; c.async=true;
-              c.src='https://www.smartsuppchat.com/loader.js?';
-              s.parentNode.insertBefore(c,s);
-            })(document);
-          }
-        } catch (err) {
-          console.error("Smartsupp init error:", err);
-        }
-      }
-
-      // שליפת המשתמש המחובר מהשרת (API שלנו)
-      fetch("/api/user")
-        .then(res => {
-          if (!res.ok) throw new Error("לא מחובר");
-          return res.json();
-        })
-        .then(data => {
-          initSmartsupp(data.user); // משתמש מחובר
-        })
-        .catch(err => {
-          console.warn("Smartsupp: משתמש לא מחובר, הצ'אט יפעל כאורח.", err);
-          initSmartsupp(null); // אורח
-        });
-    </script>
-    <noscript>
-      Powered by <a href="https://www.smartsupp.com" target="_blank">Smartsupp</a>
-    </noscript>
 
     <main class="max-w-6xl mx-auto mt-8 p-6 md:p-8 bg-white rounded-3xl shadow-xl">
         <section class="mb-8 p-6 bg-blue-50 rounded-2xl shadow-inner">
@@ -161,7 +114,7 @@
         </section>
 
         <section class="hero-image">
-            <img src="/asset/family-hero.png" alt="תמונת משפחה" class="w-full h-auto rounded-3xl shadow-xl transition-transform duration-500 hover:scale-[1.01]" />
+            <img src="/assets/family-hero.png" alt="תמונת משפחה" class="w-full h-auto rounded-3xl shadow-xl transition-transform duration-500 hover:scale-[1.01]" />
         </section>
     </main>
 
