--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
             display: none !important;
         }
     </style>
+    <script id="chatway" async="true" src="https://cdn.chatway.app/widget.js?id=vJrCwuXPSFOm"></script>
 </head>
 <body class="bg-gray-50 text-gray-800">
     <!-- Hero Section with Gradient -->
