--- a/public/index.html
+++ b/public/index.html
@@ -440,5 +440,6 @@
 
         });
     </script>
+    <script src="//code.tidio.co/wnmxintabp8xi2frtmizt5q9sopbk32o.js" async></script>
 </body>
 </html>
