--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
     <main class="max-w-6xl mx-auto mt-8 p-6 md:p-8 bg-white rounded-3xl shadow-xl">
         <section class="mb-8 p-6 bg-blue-50 rounded-2xl shadow-inner">
             <h3 id="sectionWelcome" class="text-xl md:text-2xl font-bold mb-4 text-blue-900">🌟 ברוכים הבאים למרכז המשפחתי</h3>
-            <p id="intro1" class="text-base md:text-lg text-gray-700 leading-relaxed mb-4">אתר זה נבנה עבור כל המשפחות: Ben Abou, Elharrar, Malca, Ben David, Bromberg, Barenbaum, Fass-Schneck, Weinberger, Leibner, van der Velde, Behr, de Vries, Italiaander, Izaks, Chapon, ועוד – לשיתוף תמונות, הנצחות, עץ משפחה, הודעות ועוד.</p>
+            <p id="intro1" class="text-base md:text-lg text-gray-700 leading-relaxed mb-4">אתר זה נבנה עבור כל המשפחות: Ben Abou, Elharrar, Malka, Ben David, Bromberg, Barenbaum, Fass-Schneck, Weinberger, Leibner, van der Velde, Behr, de Vries, Italiaander, Izaks, Chapon, ועוד – לשיתוף תמונות, הנצחות, עץ משפחה, הודעות ועוד.</p>
             <p id="intro2" class="text-base md:text-lg text-gray-700 leading-relaxed">ניתן להיכנס לפי צד משפחתי, לעדכן פרטים, לשוחח עם צ׳אט AI משפחתי ולחוות יחד היסטוריה מתועדת.</p>
         </section>
 
@@ -139,7 +139,7 @@
             he: {
                 title: "אתר המשפחה - Ben Abou, Elharrar ועוד",
                 welcomeTitle: "ברוכים הבאים לאתר המשפחה",
-                welcomeSubtitle: "Ben Abou • Elharrar • Malca • ועוד",
+                welcomeSubtitle: "Ben Abou • Elharrar • Malka • ועוד",
                 searchTitle: "🔍 חיפוש באתר",
                 searchPlaceholder: "הקלד שם או תיאור...",
                 sectionWelcome: "🌟 ברוכים הבאים למרכז המשפחתי",
@@ -180,7 +180,7 @@
                 searchTitle: "🔍 Search the site",
                 searchPlaceholder: "Type a name or description...",
                 sectionWelcome: "🌟 Welcome to the Family Center",
-                intro1: "This website was built for all families: Ben Abou, Elharrar, Malca, Ben David, Bromberg, Barenbaum, Fass-Schneck, Weinberger, Leibner, van der Velde, Behr, de Vries, Italiaander, Izaks, Chapon, and more – to share photos, memorials, family tree, announcements and more.",
+                intro1: "This website was built for all families: Ben Abou, Elharrar, Malka, Ben David, Bromberg, Barenbaum, Fass-Schneck, Weinberger, Leibner, van der Velde, Behr, de Vries, Italiaander, Izaks, Chapon, and more – to share photos, memorials, family tree, announcements and more.",
                 intro2: "You can join by family side, update details, chat with the Family AI Chatbot and experience documented history together.",
                 sectionTree: "Welcome to our Family Tree",
                 features: [
@@ -217,7 +217,7 @@
                 searchTitle: "🔍 Rechercher sur le site",
                 searchPlaceholder: "Tapez un nom ou une description...",
                 sectionWelcome: "🌟 Bienvenue au centre familial",
-                intro1: "Ce site a été créé pour toutes les familles : Ben Abou, Elharrar, Malca, Ben David, Bromberg, Barenbaum, Fass-Schneck, Weinberger, Leibner, van der Velde, Behr, de Vries, Italiaander, Izaks, Chapon, et plus – pour partager photos, commémorations, arbre généalogique, annonces et plus.",
+                intro1: "Ce site a été créé pour toutes les familles : Ben Abou, Elharrar, Malka, Ben David, Bromberg, Barenbaum, Fass-Schneck, Weinberger, Leibner, van der Velde, Behr, de Vries, Italiaander, Izaks, Chapon, et plus – pour partager photos, commémorations, arbre généalogique, annonces et plus.",
                 intro2: "Vous pouvez entrer par côté familial, mettre à jour des détails, discuter avec le Chat IA Familial et vivre ensemble une histoire documentée.",
                 sectionTree: "Bienvenue dans notre arbre généalogique",
                 features: [
