--- a/public/familychat.html
+++ b/public/familychat.html
@@ -454,7 +454,7 @@
         
             // Function to handle Gemini API call with exponential backoff
             const callGeminiAPI = async (payload) => {
-                const apiKey = ""; // API key is provided by the environment
+                const apiKey = "AIzaSyDf9xhLDyJsvp1PYxk1TJDsfcCp824D5O8"; // API key is provided by the environment
                 const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
                 let retryCount = 0;
                 const maxRetries = 5;
